--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <!DOCTYPE html>
   <html lang="en">
     <head>
+      <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;700&display=swap" rel="stylesheet">
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Interactive ERP Application (Community)</title>
@@ -12,4 +13,3 @@
       <script type="module" src="/src/main.tsx"></script>
     </body>
   </html>
-  
